@@ -350,6 +350,22 @@ name|solr
 operator|.
 name|common
 operator|.
+name|SolrException
+operator|.
+name|ErrorCode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|params
 operator|.
 name|CommonParams
@@ -762,6 +778,14 @@ name|replicateOnStart
 init|=
 literal|false
 decl_stmt|;
+DECL|field|numberBackupsToKeep
+specifier|private
+name|int
+name|numberBackupsToKeep
+init|=
+literal|0
+decl_stmt|;
+comment|//zero: do not delete old backups
 DECL|field|numTimesReplicated
 specifier|private
 name|int
@@ -2122,13 +2146,67 @@ name|params
 operator|.
 name|getInt
 argument_list|(
-name|NUMBER_BACKUPS_TO_KEEP
+name|NUMBER_BACKUPS_TO_KEEP_REQUEST_PARAM
 argument_list|,
+literal|0
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|numberToKeep
+operator|>
+literal|0
+operator|&&
+name|numberBackupsToKeep
+operator|>
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
+argument_list|,
+literal|"Cannot use "
+operator|+
+name|NUMBER_BACKUPS_TO_KEEP_REQUEST_PARAM
+operator|+
+literal|" if "
+operator|+
+name|NUMBER_BACKUPS_TO_KEEP_INIT_PARAM
+operator|+
+literal|" was specified in the configuration."
+argument_list|)
+throw|;
+block|}
+name|numberToKeep
+operator|=
+name|Math
+operator|.
+name|max
+argument_list|(
+name|numberToKeep
+argument_list|,
+name|numberBackupsToKeep
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|numberToKeep
+operator|<
+literal|1
+condition|)
+block|{
+name|numberToKeep
+operator|=
 name|Integer
 operator|.
 name|MAX_VALUE
-argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
 name|IndexDeletionPolicyWrapper
 name|delPolicy
 init|=
@@ -5463,6 +5541,43 @@ expr_stmt|;
 name|registerCloseHook
 argument_list|()
 expr_stmt|;
+name|Object
+name|nbtk
+init|=
+name|initArgs
+operator|.
+name|get
+argument_list|(
+name|NUMBER_BACKUPS_TO_KEEP_INIT_PARAM
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|nbtk
+operator|!=
+literal|null
+condition|)
+block|{
+name|numberBackupsToKeep
+operator|=
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|nbtk
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|numberBackupsToKeep
+operator|=
+literal|0
+expr_stmt|;
+block|}
 name|NamedList
 name|slave
 init|=
@@ -7416,14 +7531,23 @@ name|NEXT_EXECUTION_AT
 init|=
 literal|"nextExecutionAt"
 decl_stmt|;
-DECL|field|NUMBER_BACKUPS_TO_KEEP
+DECL|field|NUMBER_BACKUPS_TO_KEEP_REQUEST_PARAM
 specifier|public
 specifier|static
 specifier|final
 name|String
-name|NUMBER_BACKUPS_TO_KEEP
+name|NUMBER_BACKUPS_TO_KEEP_REQUEST_PARAM
 init|=
 literal|"numberToKeep"
+decl_stmt|;
+DECL|field|NUMBER_BACKUPS_TO_KEEP_INIT_PARAM
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|NUMBER_BACKUPS_TO_KEEP_INIT_PARAM
+init|=
+literal|"maxNumberOfBackups"
 decl_stmt|;
 block|}
 end_class
