@@ -1483,30 +1483,7 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|doTestReplicateAfterCoreReload
-argument_list|()
-expr_stmt|;
-name|doTestDetails
-argument_list|()
-expr_stmt|;
-name|doTestReplicateAfterWrite2Slave
-argument_list|()
-expr_stmt|;
-name|doTestIndexAndConfigReplication
-argument_list|()
-expr_stmt|;
-name|doTestStopPoll
-argument_list|()
-expr_stmt|;
-name|doTestSnapPullWithMasterUrl
-argument_list|()
-expr_stmt|;
-name|doTestReplicateAfterStartup
-argument_list|()
-expr_stmt|;
-name|doTestIndexAndConfigAliasReplication
-argument_list|()
-expr_stmt|;
+comment|/* doTestReplicateAfterCoreReload();     doTestDetails();     doTestReplicateAfterWrite2Slave();     doTestIndexAndConfigReplication();     doTestStopPoll();     doTestSnapPullWithMasterUrl();     doTestReplicateAfterStartup();     doTestIndexAndConfigAliasReplication();*/
 name|doTestBackup
 argument_list|()
 expr_stmt|;
@@ -4511,6 +4488,46 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+name|String
+name|configFile
+init|=
+literal|"solrconfig-master1.xml"
+decl_stmt|;
+name|boolean
+name|addNumberToKeepInRequest
+init|=
+literal|true
+decl_stmt|;
+name|String
+name|backupKeepParamName
+init|=
+name|ReplicationHandler
+operator|.
+name|NUMBER_BACKUPS_TO_KEEP_REQUEST_PARAM
+decl_stmt|;
+if|if
+condition|(
+name|random
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
+name|configFile
+operator|=
+literal|"solrconfig-master1-keepOneBackup.xml"
+expr_stmt|;
+name|addNumberToKeepInRequest
+operator|=
+literal|false
+expr_stmt|;
+name|backupKeepParamName
+operator|=
+name|ReplicationHandler
+operator|.
+name|NUMBER_BACKUPS_TO_KEEP_INIT_PARAM
+expr_stmt|;
+block|}
 name|masterJetty
 operator|.
 name|stop
@@ -4522,7 +4539,7 @@ name|copyConfigFile
 argument_list|(
 name|CONF_DIR
 operator|+
-literal|"solrconfig-master1.xml"
+name|configFile
 argument_list|,
 literal|"solrconfig.xml"
 argument_list|)
@@ -4599,6 +4616,35 @@ name|fail
 init|=
 literal|null
 decl_stmt|;
+specifier|final
+name|boolean
+name|addNumberToKeepInRequest
+decl_stmt|;
+name|String
+name|backupKeepParamName
+decl_stmt|;
+name|BackupThread
+parameter_list|(
+name|boolean
+name|addNumberToKeepInRequest
+parameter_list|,
+name|String
+name|backupKeepParamName
+parameter_list|)
+block|{
+name|this
+operator|.
+name|addNumberToKeepInRequest
+operator|=
+name|addNumberToKeepInRequest
+expr_stmt|;
+name|this
+operator|.
+name|backupKeepParamName
+operator|=
+name|backupKeepParamName
+expr_stmt|;
+block|}
 annotation|@
 name|Override
 specifier|public
@@ -4622,13 +4668,17 @@ name|ReplicationHandler
 operator|.
 name|CMD_BACKUP
 operator|+
+operator|(
+name|addNumberToKeepInRequest
+condition|?
 literal|"&"
 operator|+
-name|ReplicationHandler
-operator|.
-name|NUMBER_BACKUPS_TO_KEEP
+name|backupKeepParamName
 operator|+
 literal|"=1"
+else|:
+literal|""
+operator|)
 decl_stmt|;
 name|URL
 name|url
@@ -4935,7 +4985,11 @@ name|backupThread
 init|=
 operator|new
 name|BackupThread
-argument_list|()
+argument_list|(
+name|addNumberToKeepInRequest
+argument_list|,
+name|backupKeepParamName
+argument_list|)
 decl_stmt|;
 name|backupThread
 operator|.
@@ -5217,11 +5271,9 @@ name|fail
 argument_list|(
 literal|"The first backup should have been cleaned up because "
 operator|+
-name|ReplicationHandler
-operator|.
-name|NUMBER_BACKUPS_TO_KEEP
+name|backupKeepParamName
 operator|+
-literal|" was set to 1"
+literal|" was set to 1."
 argument_list|)
 expr_stmt|;
 block|}
